more mobile changes

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">Jai Kissan Mundi</a>
         <div>
-          <a class="btn btn-light" href="/driver_patti">Driver Patti</a>
+          <a class="btn btn-light" href="/sales">Sales</a>
           <a class="btn btn-light" href="/lots">Lot Info</a>
           <a class="btn btn-light" href="/entry">Entry</a>
         </div>
